<resources>
    <string name="app_name">Memories</string>
    <string name="date_publication">Date Publication</string>
    <string name="titre_memory">Titre Memory</string>
    <string name="description_memory">Description Memory</string>
    <string name="image_ou_video_souvenir_memory">Image ou Video souvenir/ Memory</string>
    <string name="un_petit_bouton_material_design">Un petit bouton Material Design</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="description">Description</string>
    <string name="titre_du_souvenir">Titre du Souvenir</string>
    <string name="ajouter_une_localisation">Ajouter une Localisation</string>
    <string name="date_yyyy_mm_dd">Ajouter une Date (yyyy-MM-dd)</string>
    <string name="localisation_non_ajout_e">Localisation non Ajoutée</string>
    <string name="localisation">Localisation</string>
    <string name="voir_toutes_les_localisations">Voir toutes les localisations</string>
    <string name="localisations">Localisations</string>
    <string name="juste_une_icone">Juste une icone</string>
    <string name="edit">Modification</string>
    <string name="delete">Suppression</string>
    <string name="memories">Memories</string>
    <string name="lyffsapp">Ucao Net</string>
    <string name="status_prompt">Sélectionnez votre statut</string>
    <string name="avez_vous_un_compte">Avez - vous un compte ?</string>
    <string name="se_connecter_en_invit">Se connecter en Invité</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="titre_publication">Titre Publication</string>
    <string name="texte_publication">Texte Publication</string>
    <string name="todo">TODO</string>
    <string name="connexion_invit">Connexion Invités</string>
    <string name="e_mail">E-mail</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="se_connecter_autrement">Se Connecter autrement ?</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="connexion">Connexion</string>
    <string name="avez_vous_d_j_un_compte">Avez-vous déjà un compte ?</string>
    <string name="cr_er_un_compte">Créer un Compte</string>
    <string name="entrez_un_mot_de_passe">Entrez un Mot de Passe</string>
    <string name="entrez_votre_e_mail">Entrez votre E-mail</string>
    <string name="entrez_votre_pseudo_utilisateur">Entrez votre Pseudo Utilisateur</string>
    <string name="entrez_votre_nom_complet">Entrez votre nom Complet</string>
    <string name="icone_de_retour_pour_retourer_a_l_interface_pr_c_dent">Icone de retour pour retourer a l\'interface précédent</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
    <string name="cr_ez_en_un">Créez en un</string>
    <string name="bouton_de_retour">bouton de retour</string>
    <string name="memories_home">Memories Home</string>
    <string name="memories_map">Memories Map</string>
    <string name="social_memories">Social Memories</string>
    <string name="profil_utilisateur">Profil Utilisateur</string>
    <string name="param_tres">Paramètres</string>
    <string name="ajouter_image_ou_video">ajouter_image_ou_video</string>
    <string name="choisir_une_photo">Choisir une photo ?</string>
    <string name="ajouter_une_image_ou_une_vid_o">Prendre une photo ou Video</string>
    <string name="choisir_une_vid_o">Choisir une Vidéo</string>
    <string name="memories_corporation_teams">Memories Corporation Teams</string>
    <string name="todo2">TODO2</string>
    <string name="vivi">vivi</string>
</resources>